# securAIty

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: README.md
docker/app/: Dockerfile  Dockerfile.dev
docker/natss/: nats.conf
docker/postgres/: init.sql
docker/vault/: vault.hcl
docs/adr/: 001-event-driven-architecture-nats.md  001-event-driven-architecture.md  002-agent-communication-patterns.md  002-multi-agent-orchestration.md  003-security-model.md  003-sqlalchemy-repository-pattern.md  004-storage-pattern.md  004-vault-secrets-management.md  005-python-async-design.md
docs/agents/: analyst.md  antivirus.md  auditor.md  engineer.md  overview.md  pentester.md
docs/api/: authentication.md  endpoints.md  overview.md  schemas.md
docs/runbooks/: backup-recovery.md  deployment.md  incident-response.md  monitoring.md  security-hardening.md
scripts/: update-docs-copyright.sh
secrets/: .gitignore  postgres_password.txt  vault_root_token.txt
src/securAIty/: __init__.py
src/securAIty/agents/: __init__.py  base.py
src/securAIty/agents/analyst/: __init__.py  agent.py
src/securAIty/agents/antivirus/: __init__.py  agent.py
src/securAIty/agents/auditor/: __init__.py  agent.py
src/securAIty/agents/engineer/: __init__.py  agent.py  security_agent.py
src/securAIty/agents/pentester/: __init__.py  agent.py
src/securAIty/api/: __init__.py  main.py
src/securAIty/api/middleware/: __init__.py  authentication.py  cors.py  logging.py  rate_limit.py
src/securAIty/api/routes/: __init__.py  agents.py  auth.py  events.py  health.py  incidents.py
src/securAIty/api/schemas/: __init__.py  agents.py  auth.py  common.py  events.py  incidents.py
src/securAIty/events/: __init__.py  bus.py  correlation.py  handlers.py  schema.py
src/securAIty/integration/: __init__.py
src/securAIty/integration/llm/: __init__.py  circuit_breaker.py  client.py  config.py  exceptions.py  factory.py  providers.py  retry.py
src/securAIty/integration/qwen/: __init__.py  bridge.py
src/securAIty/logging/: __init__.py
src/securAIty/orchestrator/: __init__.py  manager.py  policy_engine.py  state_manager.py  task_router.py
src/securAIty/orchestrator/patterns/: __init__.py  concurrent.py  group_chat.py  handoff.py  magentic.py  patterns.py  sequential.py
src/securAIty/security/: __init__.py  crypto.py  exceptions.py  jwt_handler.py  utils.py  vault_client.py
src/securAIty/storage/: __init__.py  database.py  schemas.py  service.py
src/securAIty/storage/migrations/: __init__.py  alembic.ini  env.py  runner.py
src/securAIty/storage/migrations/versions/: 001_initial.py  __init__.py
src/securAIty/storage/models/: __init__.py  agent.py  audit_log.py  base.py  incident.py  security_event.py
src/securAIty/storage/repositories/: __init__.py  agent_repository.py  audit_repository.py  base.py  event_repository.py  incident_repository.py
src/securAIty/utils/: __init__.py  config.py
tests/unit/: __init__.py  conftest.py
tests/unit/test_events/: __init__.py
tests/unit/test_orchestrator/: __init__.py
tests/unit/test_security/: test_crypto.py  test_exceptions.py  test_jwt_handler.py  test_utils.py  test_vault_client.py
